# super-agenda-api

./: .brainstorm.txt  .env.example  .gitignore  Cargo.toml  rustfmt.toml  taplo.toml
crates/bins/playground/: Cargo.toml
crates/bins/playground/src/: main.rs
crates/bins/server/: Cargo.toml
crates/bins/server-2/: README.txt
crates/bins/server-2/src/: error.rs  main.rs
crates/bins/server-2/src/routes/: rpc.rs
crates/bins/server/src/: error.rs  main.rs
crates/bins/server/src/web/: routes.rs
crates/bins/server/src/web/custom/: extractors.rs  response.rs
crates/bins/server/src/web/responses/: middlewares.rs
crates/bins/server/src/web/responses/handlers/: admin_admin.rs  admin_auth.rs  admin_user.rs  user_auth.rs  user_data.rs  user_deleted_tasks.rs  user_self.rs  user_tasks.rs
crates/bins/server/src/web/utils/: password.rs  token.rs
crates/libs/database/: Cargo.toml
crates/libs/database/src/models/tables/: admin.rs  user.rs  user_data.rs
crates/libs/lib-database/: Cargo.toml
crates/libs/lib-database-v2/: Cargo.toml
crates/libs/lib-database-v2/src/: lib.rs
crates/libs/lib-database-v2/src/models/: error.rs  model_manager.rs
crates/libs/lib-database-v2/src/models/tables/: user.rs
crates/libs/lib-database/src/: error.rs  lib.rs  user_table.rs
crates/libs/lib-database/src/models/: database.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/utils/: Cargo.toml
crates/libs/utils/src/: constants.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: main.rs
crates/services/web-server/src/old/: middlewares.rs  routes.rs
crates/services/web-server/src/web/: custom_extractors.rs  custom_response.rs  error.rs  mw_res_map.rs  password_manager.rs  routes.rs  routes_user_login.rs  routes_user_register.rs  token.rs
crates/services/web-test/: Cargo.toml
crates/services/web-test/src/: main.rs
src/: constants.rs  controllers.rs  database.rs  error.rs  main.rs  middleware.rs  models.rs  response.rs  routes.rs  schemas.rs  utils.rs
src/controllers/user/: auth.rs  profile.rs  task.rs
src/custom/: extractor.rs
src/models/: api.rs  auth.rs  payload.rs  schemas.rs
src/response/: error.rs  success.rs
src/utils/: config.rs  constants.rs  database.rs  extractor.rs  jwt.rs  log.rs  mongo.rs  mongodb.rs  password_stuff.rs  security.rs
(+15 files in other folders)
