[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
mongodb = "2.8.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum_macros = "0.26.2"
regex = "1.10.4"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"

lib-utils = { path = "../../libs/lib-utils" }
lib-database = { path = "../../libs/lib-database" }
