[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
mongodb = "3.1.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["full"] }

lib-database = { path = "../../libs/lib-database" }
lib-utils = { path = "../../libs/lib-utils" }
