[package]
name = "lib-database-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8.2"
serde = { version = "1.0.198", features = ["derive"] }

lib-utils = { path = "../../../crates/libs/lib-utils" }
