[package]
name = "web-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
mongodb = "2.8.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bcrypt = "0.15.1"

lib-database = { path = "../../libs/lib-database" }
lib-utils = { path = "../../libs/lib-utils" }
